--- a/src/main/resources/static/css/Estilos.css
+++ b/src/main/resources/static/css/Estilos.css
@@ -26,3 +26,16 @@ section{
     width: 60%;
     
 }
+
+footer{
+    
+    position: fixed;
+    background-color: black;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    text-align: center;
+    color:white;
+    
+}
